# aoc2023

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: mac.yml  ubuntu.yml  update_aoc_stars.yml  windows.yml
cmake/: dependencies.cmake  test_util.cmake
include/aoc2023/: get_char.hpp  hash.hpp  maths.hpp  position.hpp  trie.hpp
problem_statements/: day1.md  day10.md  day2.md  day3.md  day4.md  day5.md  day6.md
src/: CMakeLists.txt  Untitled.ipynb  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day21.cpp  day22.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  day_template.cpp
src/inputs/: day12.txt  day2.txt
src/lib/: CMakeLists.txt  get_char.cpp  hash.cpp  maths.cpp
